--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-beta.0",
     "nanoid": "^5.0.7",
